V2 - Define margin for gc-srvinfo dormats title + Fix various spacing for the home page

--- a/src/_defaults.scss
+++ b/src/_defaults.scss
@@ -128,8 +128,10 @@ h1 {
 	}
 
 	// Overwride sizing
-	h3, h4, h6 {
-		font-size: 20px;
+	h3, h4, h5, h6 {
+		font-size: 20px; // same as h5
+		margin-bottom: 5px;
+		margin-top: 23px; // same as h5
 	}
 }
 
@@ -308,7 +310,7 @@ aside {
 
 		.innerbox, &.sky .innerbox {
 			background-color: #26374a;
-			margin: 3em 0px;
+			margin: 2em 0px;
 			padding: 20px;
 			width: 50%;
 
